# asyncio

./: .env_example  README.MD  docker-compose.yaml  pyproject.toml
src/: __main__.py  swapi.py
src/config/: settings.py
src/db/: __init__.py  connection.py  models.py
