[tool.poetry]
name = "asyncio"
version = "0.1.0"
description = ""
authors = ["Nik Bezmaternykh <nbezmaternykh@7tech.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
aiohttp = "^3.9.1"
sqlalchemy = "^2.0.23"
environs = "^10.0.0"
black = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
